max width 1560px + menu overlay fix

--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -1,6 +1,8 @@
 @import "styles/variables.scss";
 
 .app {
+  flex: 1;
+  max-width: $max-page-width;
   margin-top: 65px;
   min-height: 100%;
   background-color: white;
@@ -13,10 +15,11 @@
 }
 
 .footer {
+  flex: 1;
+  max-width: $max-page-width;
   font-size: 18px;
-  max-width: calc(1024px - 60px);
   padding: 30px;
-  width: 100%;
+  width: calc(100% - 60px);
 
   a {
     color: inherit;
@@ -25,71 +28,81 @@
 
 .header {
   padding: 5px 0;
+  height: 55px;
   position: fixed;
   z-index: 100;
   top: 0;
   left: 0;
+  display: flex;
+  justify-content: center;
 
-  .table-cell {
-    vertical-align: middle;
-    padding: 5px;
-  }
+  > .table-row {
+    flex: 1;
+    max-width: $max-page-width;
 
-  .header-logo-container {
-    width: 100%;
+    .table-cell {
+      vertical-align: middle;
+      padding: 5px;
+    }
 
-    .app-logo-img-container {
-      .app-logo-img {
-        width: 100%;
-        max-width: 165px;
-        height: auto;
+    .header-logo-container {
+      width: 100%;
+
+      .app-logo-img-container {
+        .app-logo-img {
+          width: 100%;
+          max-width: 165px;
+          height: auto;
+        }
+      }
+
+      .back-button-container {
+        .back-button {
+          color: white;
+          font-size: 24px;
+        }
       }
     }
 
-    .back-button-container {
-      .back-button {
-        color: white;
-        font-size: 24px;
+    .menu-icon {
+      height: 27px;
+      overflow: hidden;
+      padding-top: 3px;
+      margin: 0 auto 4px;
+      cursor: pointer;
+
+      i {
+        display: block;
+        background: #fff;
+        height: 5px;
+        width: 30px;
+        margin: 3px auto;
+        -webkit-border-radius: 2px;
+        border-radius: 2px;
       }
     }
-  }
 
-  .menu-icon {
-    height: 27px;
-    overflow: hidden;
-    padding-top: 3px;
-    margin: 0 auto 4px;
-
-    i {
-      display: block;
-      background: #fff;
-      height: 5px;
-      width: 30px;
-      margin: 3px auto;
-      -webkit-border-radius: 2px;
-      border-radius: 2px;
+    .menu-text {
+      color: #fff;
+      font-size: 12px;
     }
-  }
 
-  .menu-text {
-    color: #fff;
-    font-size: 12px;
-  }
+    .nav-language-icon {
+      font-size: 9px;
+      border-radius: 50%;
+      background: $color-pink-2;
+      width: 27px;
+      text-align: center;
+      vertical-align: center;
+      line-height: 27px;
+      margin: auto;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
 
-  .nav-language-icon {
-    font-size: 9px;
-    border-radius: 50%;
-    background: $color-pink-2;
-    width: 27px;
-    text-align: center;
-    vertical-align: center;
-    line-height: 27px;
-    margin: auto;
-    text-transform: uppercase;
-  }
-
-  .nav-language-text {
-    font-size: 12px;
+    .nav-language-text {
+      font-size: 12px;
+    }
   }
 }
 
@@ -106,187 +119,203 @@
   overflow-y: auto;
 }
 
-.menu-side-bar {
-  max-width: 1024px;
-  margin: 0 auto;
+.menu-side-bar-container {
   position: fixed;
-  z-index: 21;
   width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
   height: 100%;
-  overflow-y: auto;
+  z-index: 100;
 
-  .close-button {
-    font-size: 20px;
-    color: white;
-    position: absolute;
-    right: 10px;
-    z-index: 30;
-    top: 15px;
-  }
+  .menu-side-bar-container-inner {
+    flex: 1;
+    max-width: 1560px;
+    width: 100%; height: 100%;
 
-  .menu-container {
-    width: 375px;
-    background: rgba(34, 37, 49, 0.88);
-    float: right;
-    position: relative;
-    z-index: 22;
-    height: 100%;
+    .menu-side-bar {
+      position: relative;
+      height: 100%;
 
-
-    &.language-menu-container {
-      color: white;
-
-      .language-information {
-        padding: 20px;
-      }
-
-      .credentials {
-        display: block;
-        text-align: center;
-        position: relative;
-        transform: scale(0.75);
-
-        img {
-          max-height: 50px;
-          max-width: 130px;
-          width: auto;
-          margin: 0 auto;
-          padding: 5px 10px 10px 10px;
-        }
-
-        .start_name {
-          padding-top: 5px;
-        }
-      }
-
-      .just-arrived-logo-container {
-        height: 50px;
-        padding: 20px;
-
-        .language-logo-img {
-          height: 100%;
-        }
-      }
-
-      .select-language-header-text {
+      .close-button {
+        margin-top: 65px;
+        font-size: 20px;
         color: white;
+        position: absolute;
+        right: 10px;
+        z-index: 150;
+        top: 15px;
+        cursor: pointer;
       }
 
-      .select-language-container {
-        padding: 20px;
+      .menu-container {
+        width: 375px;
+        background: rgba(34, 37, 49, 0.88);
+        height: calc(100% - 65px);
+        overflow-y: auto;
+        position: absolute;
+        right: 0;
+        z-index: 100;
+        margin-top: 65px;
 
-        .language-button-container {
-          display: inline-block;
+        &.language-menu-container {
+          color: white;
+
+          .language-information {
+            padding: 20px;
+          }
+
+          .credentials {
+            display: block;
+            text-align: center;
+            position: relative;
+            transform: scale(0.75);
+
+            img {
+              max-height: 50px;
+              max-width: 130px;
+              width: auto;
+              margin: 0 auto;
+              padding: 5px 10px 10px 10px;
+            }
+
+            .start_name {
+              padding-top: 5px;
+            }
+          }
+
+          .just-arrived-logo-container {
+            height: 50px;
+            padding: 20px;
+
+            .language-logo-img {
+              height: 100%;
+            }
+          }
+
+          .select-language-header-text {
+            color: white;
+          }
+
+          .select-language-container {
+            padding: 20px;
+
+            .language-button-container {
+              display: inline-block;
+              text-align: center;
+              font-size: 14px;
+              margin: 12px;
+
+              .language-code {
+                width: 60px;
+                height: 60px;
+                display: inline-block;
+                line-height: 60px;
+                box-sizing: border-box;
+                border: 1px solid #FFFFFF;
+                border-radius: 50%;
+                margin-bottom: 7px;
+                text-transform: uppercase;
+
+                &:hover {
+                  background: rgba(0, 0, 0, 0.2);
+                }
+              }
+            }
+          }
+        }
+
+        .nav-menu-icon-container {
+          color: $color-dark;
+          font-size: 105px;
+          padding: 20px 0;
+          line-height: 1em;
+          margin: auto;
           text-align: center;
-          font-size: 14px;
-          margin: 12px;
+        }
 
-          .language-code {
-            width: 60px;
-            height: 60px;
+        .nav-menu {
+          vertical-align: middle;
+          text-align: center;
+
+          .nav-menu-item-container {
             display: inline-block;
-            line-height: 60px;
-            box-sizing: border-box;
-            border: 1px solid #FFFFFF;
+
+            .nav-menu-item {
+              padding: 7px 0;
+              font-size: 20px;
+              text-align: left;
+              position: relative;
+
+              .nav-menu-link {
+                text-decoration: none;
+                color: $color-blue-3;
+                padding-left: 40px;
+
+                &:hover {
+                  opacity: 0.7;
+                }
+
+                .icon-ic-find-jobs,
+                .icon-ic-my-jobs,
+                .icon-ic-create,
+                .icon-ic-faq,
+                .icon-ic-contact,
+                .icon-ic-user,
+                .icon-ic-log-in {
+                  position: absolute;
+                  color: #fff;
+                  font-size: 1.1em;
+                  left: 0;
+                  top: 6px;
+                }
+              }
+            }
+          }
+
+        }
+
+        .nav-menu-footer {
+          color: white;
+
+          .user-info-image {
+            margin-right: 15px;
             border-radius: 50%;
-            margin-bottom: 7px;
-            text-transform: uppercase;
+            height: 35px;
+            width: 35px;
+            overflow: hidden;
+            display: inline-block;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
+            vertical-align: middle;
+            box-shadow: inset 0px 0px 1px 0px rgba(0,0,0,0.2);
 
-            &:hover {
-              background: rgba(0, 0, 0, 0.2);
+            img {
+              width: 100%;
+              height: auto;
+              min-height: 35px;
             }
           }
-        }
-      }
-    }
 
-    .nav-menu-icon-container {
-      color: $color-dark;
-      font-size: 105px;
-      padding: 20px 0;
-      line-height: 1em;
-      margin: auto;
-      text-align: center;
-    }
+          .table-cell {
+            vertical-align: bottom;
+            padding: 20px;
+          }
 
-    .nav-menu {
-      vertical-align: middle;
-      text-align: center;
+          .user-panel {
 
-      .nav-menu-item-container {
-        display: inline-block;
-
-        .nav-menu-item {
-          padding: 7px 0;
-          font-size: 20px;
-          text-align: left;
-          position: relative;
-
-          .nav-menu-link {
-            text-decoration: none;
-            color: $color-blue-3;
-            padding-left: 40px;
-
-            &:hover {
-              opacity: 0.7;
-            }
-
-           .icon-ic-find-jobs,
-           .icon-ic-my-jobs,
-           .icon-ic-create,
-           .icon-ic-faq,
-           .icon-ic-contact,
-           .icon-ic-user,
-           .icon-ic-log-in {
-              position: absolute;
-              color: #fff;
-              font-size: 1.1em;
-              left: 0;
-              top: 6px;
-            }
           }
         }
       }
 
-    }
-
-    .nav-menu-footer {
-      color: white;
-
-      .user-info-image {
-        margin-right: 15px;
-        border-radius: 50%;
-        height: 35px;
-        width: 35px;
-        overflow: hidden;
-        display: inline-block;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center center;
-        vertical-align: middle;
-        box-shadow: inset 0px 0px 1px 0px rgba(0,0,0,0.2);
-
-        img {
+      @media (max-width: 1024px) {
+        .menu-container {
           width: 100%;
-          height: auto;
-          min-height: 35px;
         }
       }
-
-      .table-cell {
-        vertical-align: bottom;
-        padding: 20px;
-      }
-
-      .user-panel {
-
-      }
     }
-  }
 
-  @media (max-width: 1024px) {
-    .menu-container {
-      width: 100%;
-    }
   }
 }
