Updated label for employees and removed how it works for companies

--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -28,28 +28,6 @@
   </section>
   <div class="instructions-container">
     <section class="instruction-pane">
-      <h3 class="heading">{{'start.steps_section.title' | translate}}</h3>
-      <ul class="list">
-        <li class="item">
-          <i class="icon-ic-task"></i>
-          {{'start.steps_section.step_1' | translate}}
-        </li>
-        <li class="item">
-          <i class="icon-ic-task"></i>
-          {{'start.steps_section.step_2' | translate}}
-        </li>
-        <li class="item">
-          <i class="icon-ic-task"></i>
-          {{'start.steps_section.step_3' | translate}}
-        </li>
-        <li class="item">
-          <i class="icon-ic-task"></i>
-          {{'start.steps_section.step_4' | translate}}
-        </li>
-      </ul>
-      <a href="#" class="button">{{'common.start_here' | translate}}</a>
-    </section>
-    <section class="instruction-pane primary">
       <h3 class="heading">{{'start.instruction_section.slide_1.title' | translate}}</h3>
       <ul class="list">
         <li class="item">
@@ -65,9 +43,9 @@
           {{'start.instruction_section.slide_1.text_3' | translate}}
         </li>
       </ul>
-      <a href="#" class="button">{{'common.start_here' | translate}}</a>
+      <a href="#" class="button">{{'common.find_assignment' | translate}}</a>
     </section>
-    <section class="instruction-pane secondary">
+    <section class="instruction-pane">
       <h3 class="heading">{{'start.instruction_section.slide_2.title' | translate}}</h3>
       <p>{{'start.instruction_section.slide_2.text_1' | translate}}</p>
       <ul class="list">
