Small syntax-fix

--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -40,7 +40,7 @@
   > .table-row {
     flex: 1;
     max-width: $max-page-width;
-    padding: 0 $header-horizontal-padding:;
+    padding: 0 $header-horizontal-padding;
 
     .table-cell {
       vertical-align: middle;
