--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -1,8 +1,6 @@
 @import "styles/variables.scss";
 
 .app {
-  flex: 1;
-  max-width: $max-page-width;
   margin-top: 65px;
   min-height: 100%;
   background-color: white;
@@ -15,11 +13,10 @@
 
 .footer {
   background: $color-secondary-gray;
-  flex: 1;
-  max-width: $max-page-width;
   font-size: 18px;
+  max-width: calc(1024px - 60px);
   padding: 30px;
-  width: calc(100% - 60px);
+  width: 100%;
 
   a {
     color: inherit;
@@ -34,13 +31,6 @@
   z-index: 100;
   top: 0;
   left: 0;
-  display: flex;
-  justify-content: center;
-
-  > .table-row {
-    flex: 1;
-    max-width: $max-page-width;
-    padding: 0 $header-horizontal-padding:;
 
     .table-cell {
       vertical-align: middle;
@@ -106,7 +96,6 @@
       font-size: 12px;
       color: $color-gray-200;
     }
-  }
 }
 
 .overbody-container {
@@ -122,27 +111,16 @@
   overflow-y: auto;
 }
 
-.menu-side-bar-container {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  height: 100%;
-  z-index: 100;
-
-  .menu-side-bar-container-inner {
-    flex: 1;
-    max-width: 1560px;
-    width: 100%; height: 100%;
-
-    .menu-side-bar {
-      position: relative;
+.menu-side-bar {
+      max-width: 1024px;
+      margin: 0 auto;
+      position: fixed;
+      z-index: 21;
+      width: 100%;
       height: 100%;
+      overflow-y: auto;
 
       .close-button {
-        margin-top: 65px;
         font-size: 20px;
         color: white;
         position: absolute;
@@ -155,12 +133,10 @@
       .menu-container {
         width: 375px;
         background: rgba(34, 37, 49, 0.88);
-        height: calc(100% - 65px);
-        overflow-y: auto;
-        position: absolute;
-        right: 0;
-        z-index: 100;
-        margin-top: 65px;
+        float: right;
+        position: relative;
+        z-index: 22;
+        height: 100%;
 
         &.language-menu-container {
           color: white;
@@ -317,7 +293,4 @@
           width: 100%;
         }
       }
-    }
-
-  }
 }
