Added correct redirects on buttons for "how it works"

--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -43,7 +43,7 @@
           {{'start.instruction_section.slide_1.text_3' | translate}}
         </li>
       </ul>
-      <a href="#" class="button">{{'common.find_assignment' | translate}}</a>
+      <a routerLink="/jobs/1" class="button">{{'common.find_assignment' | translate}}</a>
     </section>
     <section class="instruction-pane">
       <h3 class="heading">{{'start.instruction_section.slide_2.title' | translate}}</h3>
@@ -62,7 +62,7 @@
           {{'start.instruction_section.slide_2.text_4' | translate}}
         </li>
       </ul>
-      <a href="#" class="button">{{'common.start_here' | translate}}</a>
+      <a routerLink="/user" class="button">{{'common.start_here' | translate}}</a>
     </section>
   </div>
   <section class="section-partners">
