--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -71,19 +71,11 @@
     <div class="partners-logos-container">
       <div class="logo-container"><a href="http://antrop.se/"><img class="partner-logo" src="assets/images/antrop-logo2.png" alt="Antrop"></a></div>
       <div class="logo-container"><a href="http://universumglobal.com/"><img class="partner-logo" src="assets/images/logo-universum.png" alt="Universum"></a></div>
-      <div class="logo-container"><a href="http://www.wintrgarden.com/"><img class="partner-logo" src="assets/images/logo-wntrgarden.png" alt="Wintrgarden"></a></div>
-      <div class="logo-container"><a href="http://jacobburenstam.com/"><img class="partner-logo extra-padding" src="assets/images/jacob_burenstam-logo.png" alt="Jacob Burenstam"></a></div>
-      <div class="logo-container"><a href="https://cygni.se/"><img class="partner-logo" src="assets/images/wgni-logo.png" alt="Cyngi"></a></div>
       <div class="logo-container"><a href="https://www.frilansfinans.se/"><img class="partner-logo" src="assets/images/frilans_finans-logo.png" alt="Frilans Finans"></a></div>
-      <div class="logo-container"><a href="http://neverendingmonday.com/"><img class="partner-logo" src="assets/images/nem-logo.png" alt="Never Ending Monday"></a></div>
       <div class="logo-container"><a href="https://janssonnorin.se/"><img class="partner-logo" src="assets/images/jansson_norin-logo.png" alt="Jansson Norin"></a></div>
       <div class="logo-container"><a href="http://novasverige.se/"><img class="partner-logo left-padding" src="assets/images/nova-logo.png" alt="Nova"></a></div>
       <div class="logo-container"><a href="http://bondstreet.se/"><img class="partner-logo" src="assets/images/bond_street_film_sthlm.png" alt="Bond Street Film"></a></div>
-      <div class="logo-container"><a href="http://herosverige.se/"><img class="partner-logo" src="assets/images/hero_framtid_logo.jpg" alt="Hero Sverige"></a></div>
-      <div class="logo-container"><a href="http://www.migrationsverket.se/"><img class="partner-logo" src="assets/images/migrationsverket.png" alt="Migrationsverket"></a></div>
-      <div class="logo-container"><a href="http://www.redcross.se/"><img class="partner-logo" src="assets/images/roda_korset.png" alt="Röda Korset"></a></div>
-      <div class="logo-container"><a href="http://skeppsbronskatt.se/en/"><img class="partner-logo" src="assets/images/skeppsbron_skatt.png" alt="Skeppsbron Skatt"></a></div>
-      <div class="logo-container"><a href="http://welcomeapp.se/"><img class="partner-logo" src="assets/images/welcome.png" alt="Welcome!"></a></div>
+      <div class="logo-container"><a href="http://halvarsson.se/"><img class="partner-logo" src="assets/images/hallvarsson.jpg" alt="Hallvarsson Halvarsson"></a></div>
     </div>
   </section>
 </div>
