--- a/app/app.component.html
+++ b/app/app.component.html
@@ -119,7 +119,7 @@
     </div>
     <div class="table-cell">
       <div (click)="onLanguageMenuButtonClick()">
-        <div class="nav-language-icon">{{selectedLanguage.languageCode}}</div>
+        <div class="nav-language-icon">{{selectedLanguage.languageCode}}<div class="fa lang-arrow" [class.fa-caret-down]="!isLanguageMenuVisible" [class.fa-caret-up]="isLanguageMenuVisible"></div></div>
       </div>
     </div>
     <div class="table-cell">
