--- a/app/components/slider/slider.component.html
+++ b/app/components/slider/slider.component.html
@@ -1,12 +1,11 @@
 <div class="slider" (window:resize)="onResize()">
   <div class="slider-container" (swipeleft)="onSwipe(true)" (swiperight)="onSwipe(false)">
       <div *ngFor="let job of jobs" class="item-container clickable" [routerLink]="['/job', job.id]">
-        <img  class="company-logo no-select" [src]="(job.company.companyLogo && job.company.companyLogo.imageUrlSmall) || 'assets/images/placeholder-logo.png'">
+        <div class="job-name"><div>{{(job.translated && job.translated.name) || job.name | slice:0:35}}{{(job.translated && job.translated.name.length > 35) || job.name.length > 35 ? '...' : ''}}</div></div>
         <div class="salary-container" *ngIf="isCompanyUser">
           {{job.hourlyPay.rateExcludingVAT * job.hours}} {{job.hourlyPay.currency}}
         </div>
         <div class="salary-container" *ngIf="!isCompanyUser">{{job.hourlyPay.grossSalary * job.hours}} {{job.hourlyPay.currency}}</div>
-        <div class="job-name">{{(job.translated && job.translated.name) || job.name | slice:0:35}}{{(job.translated && job.translated.name.length > 35) || job.name.length > 35 ? '...' : ''}}</div>
       </div>
   </div>
 </div>
