--- a/app/views/home/home.component.scss
+++ b/app/views/home/home.component.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 .home-component {
-  background: #fff;
+  background: #e8ebee;
   text-align: center;
 
   .instructions-container {
@@ -123,44 +123,35 @@
   }
 
   .job-section {
+    padding: 40px 40px 0px 40px;
+
     .job-section-header {
       display: flex;
-      padding: 20px;
       font-size: 20px;
+      padding-bottom: 40px;
 
-      .calendar-container {
-        width: 50%;
+      .job-section-header-title {
         text-align: left;
+        width: 50%;
 
-        .calendar {
-          position: relative;
-          width: 29px;
-          text-align: center;
-          font-weight: 700;
-          vertical-align: middle;
-          display: inline-block;
-          margin: auto 5px auto 20px;
-          font-size: 14px;
-          line-height: 1em;
-
-          .icon-ic-calendar {
-            position: absolute;
-            font-size: 29px;
-            line-height: 1em;
-            left: -5px;
-            top: -12px;
-            font-weight: 300;
-          }
+        h2 {
+          margin: 0;
         }
       }
 
       .all-jobs-button-container {
         width: 50%;
         text-align: right;
+        display: flex;
+        flex-direction: column-reverse;
+
+        * {
+          color: $color-cerise-500 !important;
+        }
 
         .icon-ic-arrow-right {
           vertical-align: middle;
-          margin-left: 6px;
+          font-size: 8px;
         }
 
         a {
@@ -171,6 +162,7 @@
   }
 
   .section-partners {
+    background: white;
     text-align: center;
     position: relative;
     padding: 10px 0 40px;
