--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -66,7 +66,7 @@
       }
     }
 
-    .menu-icon {
+    .menu-icon, .nav-language-icon{
       cursor: pointer;
       color: $color-gray-200;
     }
@@ -77,8 +77,6 @@
       border-width: 2px;
       border-style: solid;
       border-color: $color-gray-200;
-      background: $color-white;
-      color: $color-gray-200;
       width: 54px;
       text-align: center;
       vertical-align: center;
@@ -86,7 +84,6 @@
       margin: auto;
       margin-right: 12px;
       text-transform: uppercase;
-      cursor: pointer;
       user-select: none;
 
       .lang-arrow {
