--- a/app/components/my-jobs-item/my-jobs-item.component.scss
+++ b/app/components/my-jobs-item/my-jobs-item.component.scss
@@ -7,7 +7,7 @@
   div {
     display: table-cell;
     padding: 20px 30px;
-    border-bottom: 1px solid #E8EBEE;
+    border-bottom: 1px solid $color-background;
     vertical-align: middle;
     cursor: pointer;
 
