--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -27,6 +27,8 @@ $color-gray-500: #383F4E;
 $color-gray-700: #2F3441;
 $color-gray-800: #222531;
 
+$color-background: #E8EBEE;
+
 $color-black: #000000;
 $color-white: #FFFFFF;
 
