--- a/app/views/home/home.component.scss
+++ b/app/views/home/home.component.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 .home-component {
-  background: #e8ebee;
+  background: $color-background;
   text-align: center;
 
   .instructions-container {
@@ -21,7 +21,7 @@
       position: relative;
       text-align: center;
       padding: 85px 20px 145px;
-      color: #fff;
+      color: $color-white;
       background: $color-secondary-blue;
 
       &:nth-of-type(2) {
@@ -82,7 +82,7 @@
         width: 100%;
         position: absolute;
         top: calc(50% - 13px);
-        color: #FFFFFF;
+        color: $color-white;
         text-shadow: 2px 2px #000;
         font-size: 22px;
       }
@@ -106,13 +106,13 @@
           text-decoration: none;
 
           .header-box-title {
-            color: #fff;
+            color: $color-white;
             font-size: 22px;
             padding: 20px;
           }
 
           .header-box-text {
-            color: #fff;
+            color: $color-white;
             font-size: 15px;
           }
 
