--- a/app/views/login/login.component.html
+++ b/app/views/login/login.component.html
@@ -1,5 +1,1 @@
-<div>
-  <input [(ngModel)]="email" type="text">
-  <input [(ngModel)]="password" type="password">
-  <button (click)="onLoginButtonClick()">Login</button>
-</div>
+<div style="background: red;">LOGIN FORM</div>
