Implemented home view with grid

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -5,7 +5,7 @@
     </nav>
   </div>
 </div>
-<section style="margin-top: 54px;">
+<section class="container-fluid" style="margin-top: 54px;">
   <router-outlet></router-outlet>
 </section>
 <footer style="background: yellow; height: 100px;">
