Make a job in "new jobs" appear clickable

--- a/app/views/home/home.component.scss
+++ b/app/views/home/home.component.scss
@@ -51,6 +51,7 @@
     background-color: $color-white;
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 0 3px 0px rgba(0,0,0,.2);
+    cursor: pointer;
 
     .job-name {
       height: 60px;
