--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,13 +1,34 @@
 <div class="navbar-fixed-top">
   <div class="container">
-    <nav class="navbar navbar-light bg-faded">
-      <a class="navbar-brand" href="#">FIXED TOP</a>
+    <nav class="header navbar navbar-light bg-faded">
+      <div class="row flex-items-xs-middle navbar-container">
+        <div class="col-xs-6 col-md-6">
+          <div class="clickable back-button-container" *ngIf="states.length > 1 && currentState !== '/home'" (click)="onBackButtonClick()">
+            <i class="fa fa-angle-left"></i>
+          </div>
+          <a routerLink="/home">
+            <img class="logo-img" src="assets/images/logo.png" alt="Just Arrived"/>
+          </a>
+        </div>
+        <div class="col-xs-6 col-md-6 right row flex-items-xs-middle">
+          <div (click)="onLanguageMenuButtonClick()" class="button-container">
+            <div class="nav-language-icon">{{selectedLanguage.languageCode}}<div class="fa lang-arrow" [class.fa-caret-down]="!isLanguageMenuVisible" [class.fa-caret-up]="isLanguageMenuVisible"></div></div>
+          </div>
+          <div (click)="onNavigationMenuButtonClick()" class="button-container">
+            <span class="fa fa-bars fa-2x menu-icon"></span>
+          </div>
+        </div>
+      </div>
     </nav>
   </div>
 </div>
-<section style="margin-top: 54px;">
+<section class="container-fluid" style="margin-top: 54px;">
   <router-outlet></router-outlet>
 </section>
-<footer style="background: yellow; height: 100px;">
-  FOOTER
+<footer class="container-fluid footer">
+  <div class="row">
+    <div class="col-xs-12 col-md-3 text-container left">{{'applications.title' | translate}}</div>
+    <div class="col-xs-12 col-md-6 text-container middle">Jakobsbergsgatan 22, 111 44 Stockholm</div>
+    <div class="col-xs-12 col-md-3 text-container right"><a href="mailto:hej@justarrived.se">hej@justarrived.se</a></div>
+  </div>
 </footer>
