Added "All jobs" to i18n

--- a/app/views/jobs/jobs.component.html
+++ b/app/views/jobs/jobs.component.html
@@ -1,7 +1,7 @@
 <div class="jobs-header row"> <!-- All Jobs -->
   <div class="col-md-6">
     <h2>
-        Alla uppdrag ({{totalJobs}}) <!-- TODO: Replace with i18n value -->
+      {{'common.all_jobs' | translate: {nbrOfJobs: totalJobs} }}
     </h2>
   </div>
 
