--- a/app/views/jobs/jobs.component.html
+++ b/app/views/jobs/jobs.component.html
@@ -29,8 +29,8 @@
 </div>
 
 
-<div class="row" style="background: white;">
-  <div class="jobs-list-container" style="width:100%;">
+<div class="job-list-container row">
+  <div>
     <job-list-item style="display: block;" *ngFor="let job of jobs" [job]="job"></job-list-item>
   </div>
 </div>
