--- a/app/components/job-list-item/job-list-item.component.scss
+++ b/app/components/job-list-item/job-list-item.component.scss
@@ -2,6 +2,7 @@
 
 .adress-field {
   color: $color-gray-400;
+  font-size: 12px;
 }
 
 .job-list-container {
@@ -19,4 +20,7 @@
 
 .salary-per-hour {
   color: $color-gray-200;
+  text-align: right;
+  white-space: nowrap;
+  font-size: 12px;
 }
