Fixed in-line styling

--- a/app/components/job-list-item/job-list-item.component.html
+++ b/app/components/job-list-item/job-list-item.component.html
@@ -1,5 +1,5 @@
 <div class="job-list-container" (click)="onListItemClick()">
-  <p style="font-weight: bold;">{{job.name}}</p>
+  <p class="job-list-container-header">{{job.name}}</p>
   <p class="adress-field" ><i class="fa fa-map-marker" aria-hidden="true"></i>   {{job.street}} {{job.zip}}</p>
 
   <div class="row">
