--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -6,7 +6,7 @@
 
 .header {
   width: 100%;
-  height: 54px;
+  height: $header-height;
   border-radius: 0px;
   padding-left: 5%;
   padding-right: 5%;
@@ -14,6 +14,14 @@
 
   .navbar-container {
     height: 100%;
+
+    .back-button-container {
+      display: inline-block;
+
+      .back-button {
+        margin-right: $header-button-margin;
+      }
+    }
 
     .logo-img {
       max-width: 165px;
@@ -38,7 +46,7 @@
       vertical-align: center;
       line-height: 22px;
       margin: auto;
-      margin-right: 12px;
+      margin-right: $header-button-margin;
       text-transform: uppercase;
       user-select: none;
 
@@ -55,12 +63,12 @@
 
 .footer {
   width: 100%;
-  height: 54px;
+  height: $header-height;
   color: $color-white;
 
   .text-container {
     background: $color-secondary-gray;
-    line-height: 54px;
+    line-height: $header-height;
     font-family: "museo-reg","Helvetica Neue",Helvetica,Arial,sans-serif;
 
     a {
