--- a/app/app.component.html
+++ b/app/app.component.html
@@ -27,8 +27,8 @@
 </section>
 <footer class="container-fluid footer">
   <div class="row">
-    <div class="col-xs-12 col-md-3 text-container left">{{'applications.title' | translate}}</div>
-    <div class="col-xs-12 col-md-6 text-container middle">Jakobsbergsgatan 22, 111 44 Stockholm</div>
-    <div class="col-xs-12 col-md-3 text-container right"><a href="mailto:hej@justarrived.se">hej@justarrived.se</a></div>
+    <div class="col-xs-12 col-md-3 text-container">{{'applications.title' | translate}}</div>
+    <div class="col-xs-12 col-md-6 text-container">Jakobsbergsgatan 22, 111 44 Stockholm</div>
+    <div class="col-xs-12 col-md-3 text-container"><a href="mailto:hej@justarrived.se">hej@justarrived.se</a></div>
   </div>
 </footer>
