Logo-mobile-fix

--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -26,6 +26,10 @@
 
     .logo-img {
       max-width: 165px;
+
+      @media screen and (max-width: 576px) {
+        zoom: 0.7;
+      }
     }
 
     .menu-icon, .nav-language-icon{
