Fixed side padding of whole site

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,3 +11,7 @@ body {
 .app-content-container {
   margin-top: $header-height;
 }
+
+body > .container, .navbar-fixed-top .container {
+  padding: 0;
+}
