Fixed "show all"

--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -12,10 +12,10 @@
   </div>
 </div>
 <div class="row home-new-jobs">
-  <div class="col-xs-9">
+  <div class="col-xs-12 col-sm-9">
     <h2>{{'start.job_section.title' | translate}}</h2>
   </div>
-  <div class="col-xs-3 show-all">
+  <div class="col-xs-12 col-sm-3 show-all">
     <span>{{'common.show_all' | translate | lowercase}} <i class="icon-ic-arrow-right"></i></span>
   </div>
   <div class="col-xs-12 jobs-slider">
