--- a/app/views/home/home.component.scss
+++ b/app/views/home/home.component.scss
@@ -34,15 +34,21 @@
 
   .show-all {
     display: flex;
-    flex-direction: column-reverse;
 
     span {
-      align-self: flex-end;
       cursor: pointer;
       color: $color-primary-cerise;
 
       i {
         font-size: 60%;
+      }
+    }
+
+    @media screen and (min-width: 576px) {
+      flex-direction: column-reverse;
+
+      span {
+        align-self: flex-end;
       }
     }
   }
