--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,9 @@
 @import 'variables.scss';
 @import 'mixins.scss';
 @import 'buttons.scss';
+@import 'typography.scss';
 
-@import url("../../assets/fonts/fontello.css");
+//@import url("../../assets/fonts/fontello.css");
 
 body {
   background-color: $color-background;
